Reorganize tests, add JUnit test suites